fix: some timepicker's problem on mobile view

--- a/src/entities/CalendarModal/CalendarModal.css
+++ b/src/entities/CalendarModal/CalendarModal.css
@@ -21,6 +21,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	touch-action: none;
 }
 
 .modal_opened {
