--- a/src/features/timepicker/index.css
+++ b/src/features/timepicker/index.css
@@ -38,7 +38,8 @@
 	gap: 32px;
 }
 
-.picker {
+.timepicker__container {
+	width: 38%;
 	height: 232px;
 	overflow: hidden;
 	z-index: 10;
@@ -46,12 +47,12 @@
 	padding-top: 10px;
 }
 
-.picker > div {
+.timepicker__container > div {
 	width: 100%;
 	height: 100%;
 }
 
-.picker > div .time {
+.timepicker__time {
 	color: #212120;
 	width: 26px;
 	height: 33px;
@@ -61,6 +62,14 @@
 	font-style: normal;
 	font-weight: 600;
 	line-height: normal;
+}
+
+.timepicker__time_hours {
+	margin-left: auto;
+}
+
+.timepicker__time_minutes {
+	margin-right: auto;
 }
 
 .timepicker__btns-group {
@@ -103,7 +112,6 @@
 }
 
 .swiper-slide-active {
-	color: red;
 	font-size: 22px;
 }
 
